# skoda-music

./: .gitignore  CHANGELOG.md  CURRENT_STATUS.md  DECISIONS.md  HANDOFF.md  NEXT_STEPS.md  PLAN.md  PROJECT_BRIEF.md  TASK_QUEUE.md  gradle.properties  settings.gradle.kts  开始执行的promt.txt
.ai/context/: CHANGELOG.md  CURRENT_STATUS.md  DECISIONS.md  EXECUTION_RULES.md  HANDOFF.md  MODULES.md  NEXT_STEPS.md  PLAN.md  PROJECT_BRIEF.md  SCOPE.md  TASK_BREAKDOWN.md  TASK_QUEUE.md
.githooks/: pre-commit
.github/workflows/: package-mvp.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  native_playback_bridge.cpp
config/: app.config.example.yaml
docs/: AI_SESSION_PROMPT.md  API17_INTERACTION_REGRESSION_CHECKLIST.md  CI_SIGNING_RELEASE_RUNBOOK.md  CONFIG_ERROR_POLICY.md  CONFIG_LOADER_INTERFACE.md  CONFIG_RUNTIME_INTEGRATION_EXAMPLE.md  CONFIG_SPEC.md  CONFIG_UI_INTEGRATION_ACCEPTANCE.md  LYRICS_ABNORMAL_TEST_CHECKLIST.md  LYRICS_STATE_MACHINE.md  MIN_IMPLEMENTATION_ENTRYPOINTS.md  POSTHOG_CONFIG_CHECKLIST.md  POSTHOG_EVENT_DICTIONARY.md  POSTHOG_INSTRUMENTATION_PLAN.md  S4_BACKGROUND_COMMAND_MATRIX.md  SELF_HEAL_AND_SETTINGS_COPY_GUIDELINES.md  UI_IA_LOW_FIDELITY.md
scripts/: check_api17_guardrails.sh  check_context.ps1  install_hooks.ps1  session_close.ps1
src/app/: mvp_app.cpp  qml_frontend_bridge.cpp  qml_frontend_bridge.h  qml_frontend_bridge_example.cpp
src/config/: config_runtime.cpp  config_runtime.h  runtime_bootstrap_example.cpp
src/lyrics/: lyrics_resolver.cpp  lyrics_resolver.h  lyrics_resolver_example.cpp
(+72 files in other folders)
